<resources>
    <string name="app_name_release">LRS 2020 Officer App</string>
    <string name="app_name_demo">LRS 2020 Officer App-Demo</string>
    <string name="select">Select</string>
    <string name="permissionText">Make your LRS 2020 Officer App experience better with these permissions</string>
    <string name="camera">Camera</string>
    <string name="cameratxt">Camera allowing you to capture pictures in the application</string>
    <string name="location">Location</string>
    <string name="location_txt">Collect and monitor information about the location of your device</string>
    <string name="storage">Storage</string>
    <string name="storage_txt">Storage allowing you to upload pictures/files in the application</string>
    <string name="accept">Accept</string>
    <string name="plz_grant">Please grant required permissions</string>
    <string name="plz_grant_loc">Please turn on device location to proceed further</string>
    <string name="plz_grant_camera">Please allow camera permission proceed further</string>
    <string name="plz_grant_storage">Please allow storage permission proceed further</string>
    <string name="ok">OK</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="con_time_out">The connection has timed out, please try again</string>
    <string name="something">Something went wrong, please try again</string>
    <string name="server_not">Server not responding, Please try later</string>
    <string name="plz_check_int">No network connectivity found, please check your internet connection</string>
    <string name="view_sro_registered_document">View SRO registered document</string>
    <string name="whether_the_plot_is_registered_prior_to_26_08_2020">Whether the plot is registered prior to 26/08/2020*</string>
    <string name="whether_the_name_of_lrs_applicant_is_tallying_with_the_ownership_document">Whether the name of LRS applicant is tallying with the Ownership document*</string>
    <string name="area_matching_with_application">Whether Plot area matching with the application*</string>
    <string name="abutting_road_details">Abutting Road Details*</string>
    <string name="_4_1_east">4.1. East* (in Sq.Mtrs)</string>
    <string name="_4_2_west">4.2. West* (in Sq.Mtrs)</string>
    <string name="_4_3_north">4.3. North* (in Sq.Mtrs)</string>
    <string name="_4_4_south">4.4. South* (in Sq.Mtrs)</string>
    <string name="market_vaule_as_per_the_sale_deed">Market Vaule as per the Sale Deed* (in Rs)</string>
    <string name="market_vaule_as_on_26_08_202">Market Vaule as on 26-08-2020* (in Rs)</string>
    <string name="is_the_sy_no_plot_number_of_the_application_existing_in_objection_database">Is the SY.No/Plot number of the application existing in objection database*</string>
    <string name="land_use">Land Use*</string>
    <string name="site_inspection_image">Site Inspection Image</string>
    <string name="recommend_for">Recommend for*</string>
    <string name="verification_remarks">Verification Remarks*</string>
    <string name="remarks"> Remarks*</string>
    <string name="submit">Submit</string>
    <string name="forward">Forward</string>
    <string name="revert">Revert</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="cancel">Cancel</string>
    <string name="scrutiny_checklist">Scrutiny Checklist</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pending_for_scrutiny">Pending For Scrutiny</string>
    <string name="total">Total Records: 04</string>
    <string name="scrutiny_details">Scrutiny Details</string>
    <string name="loc_sett">Location settings are inadequate, and cannot be fixed here. Fix in Settings.</string>
    <string name="all_per">Allow permission from settings</string>
    <string name="upload_extract">Upload Extract*</string>
    <string name="all_cam_per_setting">Allow camera permission from settings</string>
    <string name="upload_plot_layout_plan">Upload Plot Layout Plan</string>
    <string name="upload_files">Upload Files</string>
    <string name="proceed">Proceed</string>
    <string name="loc_stopped">Location updates stopped!</string>
    <string name="no_roads">No Abutting Road Details found</string>
    <string name="no_land">No Land Use Details found</string>
    <string name="no_recomm">No Recommend Details found</string>
    <string name="whether_plot_registered_prior">Please check whether plot is registered prior to 26/08/2020</string>
    <string name="whether_name_tallying">Please check whether name is tallying with ownership document</string>
    <string name="whether_area_matching">Please check whether plot area matching with the application</string>
    <string name="select_road_details">Please select abutting road details</string>
    <string name="enter_east">Please enter east area</string>
    <string name="enter_west">Please enter west area</string>
    <string name="enter_north">Please enter north area</string>
    <string name="enter_south">Please enter south area</string>
    <string name="enter_value_as_per_sale">Please enter market value as per sale deed</string>
    <string name="enter_valid_value_as_per_sale">Please enter valid market value as per sale deed</string>
    <string name="enter_value_as_one">Please enter market value as on 26-08-2020</string>
    <string name="enter_valid_value_as_one">Please enter valid market value as on 26-08-2020</string>
    <string name="plot_no_objection">Please check whether S.No/Plot No existing in objection database</string>
    <string name="select_land_use">Please select land use</string>
    <string name="select_recommend">Please select recommend for</string>
    <string name="enter_verification_remarks">Please enter verification remarks</string>
    <string name="Logout">Logout</string>
    <string name="data_empty">No Records Found</string>
    <string name="recommended_officer_remarks">Recommended Officer Remarks</string>
    <string name="enter_recommended_officer_remarks">Please enter Recommended Officer Remarks</string>
    <string name="enter_valid_recommended_officer_remarks">Please enter valid Recommended Officer Remarks</string>
    <string name="fee_intimation">Fee Intimation</string>
    <string name="select_fee_intimation">Please check Fee Intimation</string>
    <string name="short_fall">Short Fall</string>
    <string name="select_short_fall">Please check Short Fall</string>
    <string name="fee_paid">Fee Paid</string>
    <string name="fee_to_be_paid">Fee To be Paid</string>
    <string name="name_of_the_municipality_corporation">Name of the Municipality/Corporation</string>
    <string name="ward">Ward</string>
    <string name="mandal">Mandal</string>
    <string name="district">District</string>
    <string name="cluster_id">Cluster ID:</string>
    <string name="cluster_survey_s">Cluster Surveys</string>
    <string name="localities_covered">Localities Covered</string>
    <string name="applications">Applications</string>
    <string name="name_of_the_colony_locality">Name of the Colony / Locality</string>
    <string name="survey_no_s_name_of_village"><![CDATA[Survey no’s & Name of Village]]></string>
    <string name="extent_of_layout">Extent of Layout</string>
    <string name="plot_no_s_applied_for_lrs">Plot no’s applied for LRS</string>
    <string name="whether_the_colony_locality_falls_in_any_of_the_objectionable_lands_such_as_water_body_nala_shikam_land_ftl_or_buffer_of_tank">Whether the Colony/Locality falls in any of the objectionable lands such as Water Body/Nala /Shikam Land /FTL or Buffer of Tank</string>
    <string name="whether_the_colony_localityfalls_under_any_prohibitory_lands_list_like_govt_wakf_heritage_forest_land_monuments_endowment_land_ceiling_surplus_land_disputed_lands_court_litigations_etc">Whether the Colony/Localityfalls under any Prohibitory lands list like Govt. /Wakf/ heritage/forest land /monuments / Endowment Land/ceiling Surplus Land/Disputed Lands/Court Litigations etc.,</string>
    <string name="whether_the_colony_locality_falls_under_master_plan_open_space_layout_open_space_ht_line">Whether the Colony/Locality falls under Master Plan Open Space /Layout Open Space / HT line</string>
    <string name="is_the_colony_locality_affected_by_any_master_plan_road_srdp_rdp">Is the Colony/Locality affected by any Master Plan Road / SRDP/RDP</string>
    <string name="specify_the_plot_numbers_with_extent_of_area_affected">Specify the plot numbers with extent of area affected</string>
    <string name="whether_10_of_open_space_is_available_as_on_ground_and_handed_over_to_local_body">Whether 10% of open space is available as on ground and handed over to local body</string>
    <string name="of_open_space_provided_and_handed_over">% of open space provided and handed over.</string>
    <string name="specify_the_land_use_as_per_master_plan_master_plan_approved_towns_only">Specify the land use as per Master plan (Master plan approved towns only)</string>
    <string name="whether_the_lrs_can_be_permitted">Whether the LRS can be permitted</string>
    <string name="whether_any_legal_disputes_complaints_against_the_land_covered_in_this_colony">Whether any legal disputes/ complaints against the land covered in this colony</string>
    <string name="plot_numbers_recommended_for_approval_of_lrs">Application Numbers recommended for approval of LRS</string>
    <string name="plot_numbers_recommended_for_shortfall_of_lrs_please_specify">Application Numbers recommended for shortfall of LRS</string>
    <string name="plot_numbers_recommended_for_reject_of_lrs">Application Numbers recommended for reject of LRS</string>
    <string name="enter_name_colony_locality">Enter name of the Colony/Locality</string>
    <string name="enter_survey_no_name_village">Enter Survey no’s &amp; Name of Village</string>
    <string name="enter_extent_layout">Enter extent of layout</string>
    <string name="enter_plot_applied_for_lrs">Enter Plot no’s applied for LRS</string>
    <string name="check_colony_falls_objectionable_land">Check whether the Colony/Locality falls in any of the objectionable lands</string>
    <string name="check_colony_falls_prohibitory_land">Check whether the Colony/Locality falls under any Prohibitory lands list</string>
    <string name="check_colony_falls_master_plan">Check whether the Colony/Locality falls under Master Plan Open Space /Layout Open Space / HT line</string>
    <string name="check_colony_affected_master_plan">Check whether the Colony/Locality affected by any Master Plan Road / SRDP/RDP </string>
    <string name="specify_plot_no_affected">Specify the plot numbers with extent of area affected</string>
    <string name="check_open_space_available">Check whether 10% of open space is available as on ground and handed over to local body</string>
    <string name="enter_percentage_open_space">Enter the % of open space provided and handed over.</string>
    <string name="specify_land_use">Specify the land use as per master plan.</string>
    <string name="check_lrs_permitted">Check whether LRS can be permitted.</string>
    <string name="check_legal_disputes">Check whether any legal disputes/ complaints against the land covered in this colony .</string>
    <string name="enter_plot_no_approved">Specify plot numbers recommended for approval of LRS .</string>
    <string name="enter_plot_no_shorfall">Specify plot numbers recommended for shortfall of LRS .</string>
    <string name="enter_plot_no_reject">Specify plot numbers recommended for reject of LRS .</string>
    <string name="select_plot_numbers_recommended_for_approval_of_lrs">Please Choose Application Numbers recommended for approval of LRS</string>
</resources>