<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_8dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <RelativeLayout
                android:id="@+id/cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">

                    <LinearLayout
                        android:id="@+id/root"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/dimen_20dp"
                        android:layout_marginRight="@dimen/dimen_20dp"
                        android:background="@color/white"
                        android:gravity="center"
                        android:orientation="vertical">


                        <LinearLayout
                            android:id="@+id/ll"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_20dp"
                            android:layout_marginBottom="@dimen/dimen_20dp"
                            android:orientation="vertical">


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/tv_user_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColorHint="@color/black"
                                    app:boxStrokeColor="@color/black"
                                    app:errorEnabled="false"
                                    app:errorTextAppearance="@style/text_in_layout_error_hint_Style"
                                    app:hintTextAppearance="@style/text_in_layout_hint_Style"
                                    app:hintTextColor="@color/black">

                                    <com.google.android.material.textfield.TextInputEditText
                                        android:id="@+id/et_userName"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="20dp"
                                        android:layout_marginTop="20dp"
                                        android:layout_marginRight="20dp"
                                        android:ems="10"
                                        android:background="@color/white"
                                        android:fontFamily="@font/elmessiri_regular"
                                        android:hint="@string/username"
                                        android:imeOptions="actionNext"
                                        android:maxLength="40"
                                        android:padding="20dp"
                                        android:singleLine="true"
                                        android:textAllCaps="true"
                                        android:textColor="@color/black"
                                        android:textSize="@dimen/dimen_16sp" />
                                </com.google.android.material.textfield.TextInputLayout>

                                <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/tv_password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColorHint="@color/black"
                                    app:boxStrokeColor="@color/black"
                                    app:errorEnabled="false"
                                    app:errorTextAppearance="@style/text_in_layout_error_hint_Style"
                                    app:hintTextAppearance="@style/text_in_layout_hint_Style"
                                    app:hintTextColor="@color/black"
                                    app:passwordToggleEnabled="true">

                                    <com.google.android.material.textfield.TextInputEditText
                                        android:id="@+id/et_pwd"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="20dp"
                                        android:layout_marginTop="20dp"
                                        android:layout_marginRight="20dp"
                                        android:drawableTint="@color/black"
                                        android:ems="10"
                                        android:background="@color/white"
                                        android:fontFamily="@font/elmessiri_regular"
                                        android:hint="@string/password"
                                        android:imeOptions="actionDone"
                                        android:inputType="textPassword"
                                        android:padding="20dp"
                                        android:singleLine="true"
                                        android:textColor="@color/black"
                                        android:textSize="@dimen/dimen_16sp" />
                                </com.google.android.material.textfield.TextInputLayout>
                            </LinearLayout>


                            <Button
                                android:id="@+id/btn_submit"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:layout_marginLeft="@dimen/dimen_20dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginRight="@dimen/dimen_20dp"
                                android:backgroundTint="@color/colorPrimaryDark"
                                android:fontFamily="@font/elmessiri_regular"
                                android:gravity="center"
                                android:text="@string/login"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                android:textSize="@dimen/dimen_16sp" />

                        </LinearLayout>

                    </LinearLayout>
                </ScrollView>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/cover"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cover"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintVertical_weight="0.5">

                <ImageView
                    android:id="@+id/user_profile_photo"
                    android:layout_width="@dimen/_80dp"
                    android:layout_height="@dimen/_80dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/lrs2020" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/device_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:layout_marginBottom="@dimen/dimen_5dp" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/root_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent" />


    </RelativeLayout>
</layout>